--- a/Redirect & url_for (case, Google Search & Google Cendekia)/static/style.css
+++ b/Redirect & url_for (case, Google Search & Google Cendekia)/static/style.css
@@ -36,4 +36,24 @@ header a:hover{
     color: aliceblue;
 }
 
+main{
+    text-align: center;
+    padding-top: 20vh;
+}
+
+main form input,
+span{
+    width: 35%;
+    padding: 7px;
+    font-size: 20px;
+    border: solid 1px cornflowerblue;
+}
+main form span{
+    background-color: cornflowerblue;
+}
+main form span a{
+    text-decoration: none;
+}
+
+
 
